--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "4              2      59222    Charles Shyer               2       56106  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "4       daughter         5600  "
       ]
      },
-     "execution_count": 107,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -986,12 +986,12 @@
     "display(merged_df.head())\n",
     "\n",
     "# Save the merged DataFrame to a CSV file\n",
-    "merged_df.to_csv(\"cleaned_data/movies.csv\", index=False)"
+    "merged_df.to_csv(\"clean_data/movies.csv\", index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -1180,13 +1180,13 @@
     "display(exploded_directors_df.head())\n",
     "\n",
     "# Save the exploded DataFrame to a CSV file\n",
-    "exploded_actors_df.to_csv(\"cleaned_data/actors.csv\", index=False)\n",
-    "exploded_directors_df.to_csv(\"cleaned_data/directors.csv\", index=False)\n"
+    "exploded_actors_df.to_csv(\"clean_data/actors.csv\", index=False)\n",
+    "exploded_directors_df.to_csv(\"clean_data/directors.csv\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
     "display(exploded_keywords_df.head())\n",
     "\n",
     "# Save the exploded DataFrame to a CSV file\n",
-    "exploded_keywords_df.to_csv(\"cleaned_data/keywords.csv\", index=False)\n"
+    "exploded_keywords_df.to_csv(\"clean_data/keywords.csv\", index=False)\n"
    ]
   },
   {
