initial deep learning attempt

--- a/simple_regressions.ipynb
+++ b/simple_regressions.ipynb
@@ -429,6 +429,14 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f630429",
+   "metadata": {},
+   "source": [
+    "I preformed some simple regressions using sklearn and statsmodels to test the \"out of the box\" functionality of linear vs ordinal regressions. I computed the mean absolute error to judge the performance of the models. Overall, the two types of models performed very similarly on the initial set of features. The next step will be to figure out how to incorporate the other variables that are not numerical in the traditional sense."
+   ]
   }
  ],
  "metadata": {
