predicting popularity and revenue

--- a/document_creation.ipynb
+++ b/document_creation.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "id": "48bd4dbb",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "id": "30c0c10a",
    "metadata": {},
    "outputs": [],
@@ -527,17 +527,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "id": "0a414628",
    "metadata": {},
    "outputs": [],
    "source": [
-    "movies = movies[[\"id\", \"genres\", \"production_companies\", \"vote_average\", \"vote_count\"]]"
+    "movies = movies[[\"id\", \"genres\", \"production_companies\", \"vote_average\", \"vote_count\", \"popularity\", \"revenue\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "id": "3b3a1fbd",
    "metadata": {},
    "outputs": [
@@ -567,6 +567,8 @@
        "      <th>production_companies</th>\n",
        "      <th>vote_average</th>\n",
        "      <th>vote_count</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>revenue</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -577,6 +579,8 @@
        "      <td>[{'name': 'Pixar Animation Studios', 'id': 3}]</td>\n",
        "      <td>7.7</td>\n",
        "      <td>5415.0</td>\n",
+       "      <td>21.946943</td>\n",
+       "      <td>373554033.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -585,6 +589,8 @@
        "      <td>[{'name': 'TriStar Pictures', 'id': 559}, {'na...</td>\n",
        "      <td>6.9</td>\n",
        "      <td>2413.0</td>\n",
+       "      <td>17.015539</td>\n",
+       "      <td>262797249.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -593,6 +599,8 @@
        "      <td>[{'name': 'Sandollar Productions', 'id': 5842}...</td>\n",
        "      <td>5.7</td>\n",
        "      <td>173.0</td>\n",
+       "      <td>8.387519</td>\n",
+       "      <td>76578911.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -601,6 +609,8 @@
        "      <td>[{'name': 'Regency Enterprises', 'id': 508}, {...</td>\n",
        "      <td>7.7</td>\n",
        "      <td>1886.0</td>\n",
+       "      <td>17.924927</td>\n",
+       "      <td>187436818.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -609,6 +619,8 @@
        "      <td>[{'name': 'Paramount Pictures', 'id': 4}, {'na...</td>\n",
        "      <td>6.2</td>\n",
        "      <td>141.0</td>\n",
+       "      <td>6.677277</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -622,12 +634,19 @@
        "5    949  [{'id': 28, 'name': 'Action'}, {'id': 80, 'nam...   \n",
        "6  11860  [{'id': 35, 'name': 'Comedy'}, {'id': 10749, '...   \n",
        "\n",
-       "                                production_companies  vote_average  vote_count  \n",
-       "0     [{'name': 'Pixar Animation Studios', 'id': 3}]           7.7      5415.0  \n",
-       "1  [{'name': 'TriStar Pictures', 'id': 559}, {'na...           6.9      2413.0  \n",
-       "4  [{'name': 'Sandollar Productions', 'id': 5842}...           5.7       173.0  \n",
-       "5  [{'name': 'Regency Enterprises', 'id': 508}, {...           7.7      1886.0  \n",
-       "6  [{'name': 'Paramount Pictures', 'id': 4}, {'na...           6.2       141.0  "
+       "                                production_companies  vote_average  \\\n",
+       "0     [{'name': 'Pixar Animation Studios', 'id': 3}]           7.7   \n",
+       "1  [{'name': 'TriStar Pictures', 'id': 559}, {'na...           6.9   \n",
+       "4  [{'name': 'Sandollar Productions', 'id': 5842}...           5.7   \n",
+       "5  [{'name': 'Regency Enterprises', 'id': 508}, {...           7.7   \n",
+       "6  [{'name': 'Paramount Pictures', 'id': 4}, {'na...           6.2   \n",
+       "\n",
+       "   vote_count popularity      revenue  \n",
+       "0      5415.0  21.946943  373554033.0  \n",
+       "1      2413.0  17.015539  262797249.0  \n",
+       "4       173.0   8.387519   76578911.0  \n",
+       "5      1886.0  17.924927  187436818.0  \n",
+       "6       141.0   6.677277          0.0  "
       ]
      },
      "metadata": {},
@@ -642,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "9241fcb6",
    "metadata": {},
    "outputs": [
@@ -683,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "id": "48fea94a",
    "metadata": {},
    "outputs": [
@@ -713,6 +732,8 @@
        "      <th>production_companies</th>\n",
        "      <th>vote_average</th>\n",
        "      <th>vote_count</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>revenue</th>\n",
        "      <th>genre_ids</th>\n",
        "      <th>prod_ids</th>\n",
        "      <th>combined_ids</th>\n",
@@ -726,6 +747,8 @@
        "      <td>[{'name': 'Pixar Animation Studios', 'id': 3}]</td>\n",
        "      <td>7.7</td>\n",
        "      <td>5415.0</td>\n",
+       "      <td>21.946943</td>\n",
+       "      <td>373554033.0</td>\n",
        "      <td>[16, 35, 10751, 0, 0, 0, 0]</td>\n",
        "      <td>[3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>[16, 35, 10751, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, ...</td>\n",
@@ -737,6 +760,8 @@
        "      <td>[{'name': 'TriStar Pictures', 'id': 559}, {'na...</td>\n",
        "      <td>6.9</td>\n",
        "      <td>2413.0</td>\n",
+       "      <td>17.015539</td>\n",
+       "      <td>262797249.0</td>\n",
        "      <td>[12, 14, 10751, 0, 0, 0, 0]</td>\n",
        "      <td>[559, 2550, 10201, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>[12, 14, 10751, 0, 0, 0, 0, 559, 2550, 10201, ...</td>\n",
@@ -748,6 +773,8 @@
        "      <td>[{'name': 'Sandollar Productions', 'id': 5842}...</td>\n",
        "      <td>5.7</td>\n",
        "      <td>173.0</td>\n",
+       "      <td>8.387519</td>\n",
+       "      <td>76578911.0</td>\n",
        "      <td>[35, 0, 0, 0, 0, 0, 0]</td>\n",
        "      <td>[5842, 9195, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>[35, 0, 0, 0, 0, 0, 0, 5842, 9195, 0, 0, 0, 0,...</td>\n",
@@ -759,6 +786,8 @@
        "      <td>[{'name': 'Regency Enterprises', 'id': 508}, {...</td>\n",
        "      <td>7.7</td>\n",
        "      <td>1886.0</td>\n",
+       "      <td>17.924927</td>\n",
+       "      <td>187436818.0</td>\n",
        "      <td>[28, 80, 18, 53, 0, 0, 0]</td>\n",
        "      <td>[508, 675, 6194, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,...</td>\n",
        "      <td>[28, 80, 18, 53, 0, 0, 0, 508, 675, 6194, 0, 0...</td>\n",
@@ -770,6 +799,8 @@
        "      <td>[{'name': 'Paramount Pictures', 'id': 4}, {'na...</td>\n",
        "      <td>6.2</td>\n",
        "      <td>141.0</td>\n",
+       "      <td>6.677277</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>[35, 10749, 0, 0, 0, 0, 0]</td>\n",
        "      <td>[4, 258, 932, 5842, 14941, 55873, 58079, 0, 0,...</td>\n",
        "      <td>[35, 10749, 0, 0, 0, 0, 0, 4, 258, 932, 5842, ...</td>\n",
@@ -793,12 +824,12 @@
        "5  [{'name': 'Regency Enterprises', 'id': 508}, {...           7.7   \n",
        "6  [{'name': 'Paramount Pictures', 'id': 4}, {'na...           6.2   \n",
        "\n",
-       "   vote_count                    genre_ids  \\\n",
-       "0      5415.0  [16, 35, 10751, 0, 0, 0, 0]   \n",
-       "1      2413.0  [12, 14, 10751, 0, 0, 0, 0]   \n",
-       "4       173.0       [35, 0, 0, 0, 0, 0, 0]   \n",
-       "5      1886.0    [28, 80, 18, 53, 0, 0, 0]   \n",
-       "6       141.0   [35, 10749, 0, 0, 0, 0, 0]   \n",
+       "   vote_count popularity      revenue                    genre_ids  \\\n",
+       "0      5415.0  21.946943  373554033.0  [16, 35, 10751, 0, 0, 0, 0]   \n",
+       "1      2413.0  17.015539  262797249.0  [12, 14, 10751, 0, 0, 0, 0]   \n",
+       "4       173.0   8.387519   76578911.0       [35, 0, 0, 0, 0, 0, 0]   \n",
+       "5      1886.0  17.924927  187436818.0    [28, 80, 18, 53, 0, 0, 0]   \n",
+       "6       141.0   6.677277          0.0   [35, 10749, 0, 0, 0, 0, 0]   \n",
        "\n",
        "                                            prod_ids  \\\n",
        "0  [3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...   \n",
@@ -825,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "id": "e2053114",
    "metadata": {},
    "outputs": [
@@ -855,6 +886,8 @@
        "      <th>crew_ids</th>\n",
        "      <th>vote_average</th>\n",
        "      <th>combined_ids</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>revenue</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -865,6 +898,8 @@
        "      <td>[0, 0, 0, 0, 0, 0, 7883, 7961, 1458006, 174870...</td>\n",
        "      <td>7.7</td>\n",
        "      <td>[16, 35, 10751, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>21.946943</td>\n",
+       "      <td>373554033.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -873,6 +908,8 @@
        "      <td>[0, 0, 0, 0, 0, 0, 9967, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>6.9</td>\n",
        "      <td>[12, 14, 10751, 0, 0, 0, 0, 559, 2550, 10201, ...</td>\n",
+       "      <td>17.015539</td>\n",
+       "      <td>262797249.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -881,6 +918,8 @@
        "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
        "      <td>5.7</td>\n",
        "      <td>[35, 0, 0, 0, 0, 0, 0, 5842, 9195, 0, 0, 0, 0,...</td>\n",
+       "      <td>8.387519</td>\n",
+       "      <td>76578911.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -889,6 +928,8 @@
        "      <td>[0, 0, 0, 0, 0, 0, 11411, 15843, 13677, 147927...</td>\n",
        "      <td>7.7</td>\n",
        "      <td>[28, 80, 18, 53, 0, 0, 0, 508, 675, 6194, 0, 0...</td>\n",
+       "      <td>17.924927</td>\n",
+       "      <td>187436818.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -897,6 +938,8 @@
        "      <td>[0, 0, 0, 0, 0, 0, 1718, 18173, 1467272, 15359...</td>\n",
        "      <td>6.2</td>\n",
        "      <td>[35, 10749, 0, 0, 0, 0, 0, 4, 258, 932, 5842, ...</td>\n",
+       "      <td>6.677277</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -917,12 +960,12 @@
        "3  [0, 0, 0, 0, 0, 0, 11411, 15843, 13677, 147927...           7.7   \n",
        "4  [0, 0, 0, 0, 0, 0, 1718, 18173, 1467272, 15359...           6.2   \n",
        "\n",
-       "                                        combined_ids  \n",
-       "0  [16, 35, 10751, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, ...  \n",
-       "1  [12, 14, 10751, 0, 0, 0, 0, 559, 2550, 10201, ...  \n",
-       "2  [35, 0, 0, 0, 0, 0, 0, 5842, 9195, 0, 0, 0, 0,...  \n",
-       "3  [28, 80, 18, 53, 0, 0, 0, 508, 675, 6194, 0, 0...  \n",
-       "4  [35, 10749, 0, 0, 0, 0, 0, 4, 258, 932, 5842, ...  "
+       "                                        combined_ids popularity      revenue  \n",
+       "0  [16, 35, 10751, 0, 0, 0, 0, 3, 0, 0, 0, 0, 0, ...  21.946943  373554033.0  \n",
+       "1  [12, 14, 10751, 0, 0, 0, 0, 559, 2550, 10201, ...  17.015539  262797249.0  \n",
+       "2  [35, 0, 0, 0, 0, 0, 0, 5842, 9195, 0, 0, 0, 0,...   8.387519   76578911.0  \n",
+       "3  [28, 80, 18, 53, 0, 0, 0, 508, 675, 6194, 0, 0...  17.924927  187436818.0  \n",
+       "4  [35, 10749, 0, 0, 0, 0, 0, 4, 258, 932, 5842, ...   6.677277          0.0  "
       ]
      },
      "metadata": {},
@@ -935,7 +978,7 @@
     "movies['id'] = movies['id'].astype(str)\n",
     "\n",
     "# Perform the join operation\n",
-    "merged_df = id_df.merge(movies[['id', 'vote_average', 'combined_ids']], left_on='movie_id', right_on='id', how='inner')\n",
+    "merged_df = id_df.merge(movies[['id', 'vote_average', 'combined_ids', 'popularity', 'revenue']], left_on='movie_id', right_on='id', how='inner')\n",
     "merged_df = merged_df.drop(columns=['id'])\n",
     "\n",
     "# Display the first few rows of the merged DataFrame\n",
@@ -944,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "id": "c557ca08",
    "metadata": {},
    "outputs": [
@@ -971,6 +1014,8 @@
        "      <th></th>\n",
        "      <th>movie_id</th>\n",
        "      <th>vote_average</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>revenue</th>\n",
        "      <th>final_ids</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -979,30 +1024,40 @@
        "      <th>0</th>\n",
        "      <td>862</td>\n",
        "      <td>7.7</td>\n",
+       "      <td>21.946943</td>\n",
+       "      <td>373554033.0</td>\n",
        "      <td>[31, 12898, 7167, 12899, 12900, 7907, 8873, 11...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>8844</td>\n",
        "      <td>6.9</td>\n",
+       "      <td>17.015539</td>\n",
+       "      <td>262797249.0</td>\n",
        "      <td>[2157, 8537, 205, 145151, 5149, 10739, 58563, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>11862</td>\n",
        "      <td>5.7</td>\n",
+       "      <td>8.387519</td>\n",
+       "      <td>76578911.0</td>\n",
        "      <td>[67773, 3092, 519, 70696, 59222, 18793, 14592,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>949</td>\n",
        "      <td>7.7</td>\n",
+       "      <td>17.924927</td>\n",
+       "      <td>187436818.0</td>\n",
        "      <td>[1158, 380, 5576, 10127, 3197, 6200, 15851, 15...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>11860</td>\n",
        "      <td>6.2</td>\n",
+       "      <td>6.677277</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>[3, 15887, 17141, 4301, 12957, 8937, 16554, 34...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1010,12 +1065,19 @@
        "</div>"
       ],
       "text/plain": [
-       "  movie_id  vote_average                                          final_ids\n",
-       "0      862           7.7  [31, 12898, 7167, 12899, 12900, 7907, 8873, 11...\n",
-       "1     8844           6.9  [2157, 8537, 205, 145151, 5149, 10739, 58563, ...\n",
-       "2    11862           5.7  [67773, 3092, 519, 70696, 59222, 18793, 14592,...\n",
-       "3      949           7.7  [1158, 380, 5576, 10127, 3197, 6200, 15851, 15...\n",
-       "4    11860           6.2  [3, 15887, 17141, 4301, 12957, 8937, 16554, 34..."
+       "  movie_id  vote_average popularity      revenue  \\\n",
+       "0      862           7.7  21.946943  373554033.0   \n",
+       "1     8844           6.9  17.015539  262797249.0   \n",
+       "2    11862           5.7   8.387519   76578911.0   \n",
+       "3      949           7.7  17.924927  187436818.0   \n",
+       "4    11860           6.2   6.677277          0.0   \n",
+       "\n",
+       "                                           final_ids  \n",
+       "0  [31, 12898, 7167, 12899, 12900, 7907, 8873, 11...  \n",
+       "1  [2157, 8537, 205, 145151, 5149, 10739, 58563, ...  \n",
+       "2  [67773, 3092, 519, 70696, 59222, 18793, 14592,...  \n",
+       "3  [1158, 380, 5576, 10127, 3197, 6200, 15851, 15...  \n",
+       "4  [3, 15887, 17141, 4301, 12957, 8937, 16554, 34...  "
       ]
      },
      "metadata": {},
