--- a/data_manipulation/data_cleaning.ipynb
+++ b/data_manipulation/data_cleaning.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -52,12 +52,12 @@
     "        shutil.copy(src, dst)\n",
     "\n",
     "print(f\"All files copied to: {data_dir}\")\n",
-    "os.rename(\"data/keywords.csv\", \"data/movies_keywords.csv\")\n"
+    "os.rename(\"../data/keywords.csv\", \"../data/movies_keywords.csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
     "        return None\n",
     "    \n",
     "# Load your dataset\n",
-    "df = pd.read_csv(\"data/movies_metadata.csv\", low_memory=False)\n",
+    "df = pd.read_csv(\"../data/movies_metadata.csv\", low_memory=False)\n",
     "metadata = df.copy()\n",
     "print(f\"Inital Count: {metadata.shape[0]}\")\n",
     "metadata = metadata[metadata['status'] == 'Released']\n",
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
    ],
    "source": [
     "# Load the DataFrame\n",
-    "df = pd.read_csv(\"data/credits.csv\")\n",
+    "df = pd.read_csv(\"../data/credits.csv\")\n",
     "\n",
     "# Define a function to simplify and convert types\n",
     "def simplify_people(credits_str):\n",
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
    ],
    "source": [
     "# Load the DataFrame\n",
-    "df = pd.read_csv(\"data/movies_keywords.csv\")\n",
+    "df = pd.read_csv(\"../data/movies_keywords.csv\")\n",
     "\n",
     "# Define a function to simplify and convert types\n",
     "def simplify_keywords(keyword_str):\n",
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +820,7 @@
     "display(merged_df.head())\n",
     "\n",
     "# Save the merged DataFrame to a CSV file\n",
-    "merged_df.to_csv(\"clean_data/movies.csv\", index=False)"
+    "merged_df.to_csv(\"../clean_data/movies.csv\", index=False)"
    ]
   },
   {
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
    ],
    "source": [
     "# Load your credits CSV\n",
-    "df = pd.read_csv(\"data/movies_keywords.csv\")\n",
+    "df = pd.read_csv(\"../data/movies_keywords.csv\")\n",
     "\n",
     "# Define a function to extract name, id, and gender from cast JSON\n",
     "def extract_keyword_info(keyword_json_str):\n",
@@ -1114,7 +1114,7 @@
     "display(exploded_keywords_df.head())\n",
     "\n",
     "# Save the exploded DataFrame to a CSV file\n",
-    "exploded_keywords_df.to_csv(\"clean_data/keywords.csv\", index=False)\n"
+    "exploded_keywords_df.to_csv(\"../clean_data/keywords.csv\", index=False)\n"
    ]
   },
   {
