--- a/data_manipulation/document_creation.ipynb
+++ b/data_manipulation/document_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "7a2e9d47",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "6845b491",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('data/credits.csv')"
+    "df = pd.read_csv('../data/credits.csv')"
    ]
   },
   {
@@ -258,12 +258,12 @@
     "id_df = pd.DataFrame({'movie_id': df['id'], 'cast_ids': padded_cast_ids[:len(df)], 'crew_ids': padded_crew_ids[:len(df)]})\n",
     "id_df.head()\n",
     "# Save the DataFrame to a CSV file\n",
-    "id_df.to_csv('clean_data/credits_padded.csv', index=False)"
+    "id_df.to_csv('../clean_data/credits_padded.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "48bd4dbb",
    "metadata": {},
    "outputs": [
@@ -510,7 +510,7 @@
     }
    ],
    "source": [
-    "movies = pd.read_csv('data/movies_metadata.csv')\n",
+    "movies = pd.read_csv('../data/movies_metadata.csv')\n",
     "display(movies.head())"
    ]
   },
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "id": "c557ca08",
    "metadata": {},
    "outputs": [
@@ -1153,7 +1153,7 @@
     "# merged_df = merged_df.drop(columns=['cast_ids', 'crew_ids', 'combined_ids'])\n",
     "display(merged_df.head())\n",
     "# Save the final DataFrame to a CSV file\n",
-    "merged_df.to_csv('clean_data/embeddings.csv', index=False)\n",
+    "merged_df.to_csv('../clean_data/embeddings.csv', index=False)\n",
     "\n",
     "# print max and min lengths of final_ids\n",
     "print(\"Max length of final_ids:\", merged_df['final_ids'].apply(len).max())\n",
@@ -1180,7 +1180,7 @@
     }
    ],
    "source": [
-    "merged_df = pd.read_csv('clean_data/embeddings.csv')\n",
+    "merged_df = pd.read_csv('../clean_data/embeddings.csv')\n",
     "\n",
     "max_length = merged_df['final_ids'].apply(len).max()\n",
     "min_length = merged_df['final_ids'].apply(len).min()\n",
