--- a/initial_exploration/simple_deep_learning_model.ipynb
+++ b/initial_exploration/simple_deep_learning_model.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "1daa4d90",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"clean_data/movies.csv\")\n",
+    "df = pd.read_csv(\"../clean_data/movies.csv\")\n",
     "\n",
     "features = [\"popularity\", \"revenue\", \"budget\", \"runtime\"]\n",
     "df = df.fillna(0)\n",
