--- a/initial_exploration/simple_regressions.ipynb
+++ b/initial_exploration/simple_regressions.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "id": "aa67403b",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"clean_data/movies.csv\")\n",
+    "df = pd.read_csv(\"../clean_data/movies.csv\")\n",
     "\n",
     "columns = [\"popularity\", \"revenue\", \"budget\", \"runtime\"]\n",
     "df_cleaned = df.fillna(0)\n",
