--- a/results/visualizations.ipynb
+++ b/results/visualizations.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "9227bd68",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "ratings = pd.read_csv('data/ratings.csv')\n",
+    "ratings = pd.read_csv('../data/ratings.csv')\n",
     "ratings.head()"
    ]
   },
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "ab95c80d",
    "metadata": {},
    "outputs": [
