fixed routing in data manipulation files

--- a/data_manipulation/data_cleaning.ipynb
+++ b/data_manipulation/data_cleaning.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/vikram/miniconda3/envs/ml-0451/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import kagglehub\n",
@@ -24,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.10), please consider upgrading to the latest version (0.3.12).\n",
-      "All files copied to: /Users/vikram/Desktop/Year 4/Semester 2/Machine Learning/Project/cs451-project/data\n"
+      "All files copied to: /Users/vikram/Desktop/Year 4/Semester 2/Machine Learning/Project/cs451-project/data_manipulation/../data\n"
      ]
     }
    ],
@@ -42,7 +33,7 @@
     "\n",
     "# Define current directory\n",
     "current_dir = os.getcwd()\n",
-    "data_dir = os.path.join(current_dir, \"data\")\n",
+    "data_dir = os.path.join(current_dir, \"../data\")\n",
     "\n",
     "# Copy all files from the kagglehub cache folder to current dir\n",
     "for filename in os.listdir(path):\n",
@@ -57,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +411,7 @@
        "4  {'name': 'Charles Shyer', 'gender': '2', 'id':...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +525,7 @@
        "4  11862  [{'name': 'baby', 'id': '1009'}, {'name': 'mid..."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +968,7 @@
    ],
    "source": [
     "# Load your credits CSV\n",
-    "df = pd.read_csv(\"data/credits.csv\")\n",
+    "df = pd.read_csv(\"../data/credits.csv\")\n",
     "\n",
     "# Define a function to extract name, id, and gender from cast JSON\n",
     "def extract_cast_info(cast_json_str):\n",
@@ -1014,13 +1005,13 @@
     "display(exploded_directors_df.head())\n",
     "\n",
     "# Save the exploded DataFrame to a CSV file\n",
-    "exploded_actors_df.to_csv(\"clean_data/actors.csv\", index=False)\n",
-    "exploded_directors_df.to_csv(\"clean_data/directors.csv\", index=False)\n"
+    "exploded_actors_df.to_csv(\"../clean_data/actors.csv\", index=False)\n",
+    "exploded_directors_df.to_csv(\"../clean_data/directors.csv\", index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
