--- a/data_manipulation/document_creation.ipynb
+++ b/data_manipulation/document_creation.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "fae06e8a",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "34f51df9",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "4  [{'credit_id': '52fe44959251416c75039ed7', 'de...  11862  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "56390c41",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "0d28df9a",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "af0d85fc",
    "metadata": {},
    "outputs": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7cd54c56",
    "metadata": {},
    "outputs": [],
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "48bd4dbb",
    "metadata": {},
    "outputs": [
@@ -271,8 +271,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/sn/hvdpnw3n7l35_lcfs2ppcb_80000gn/T/ipykernel_81073/1220713610.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  movies = pd.read_csv('data/movies_metadata.csv')\n"
+      "/var/folders/sn/hvdpnw3n7l35_lcfs2ppcb_80000gn/T/ipykernel_70536/1018972999.py:1: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  movies = pd.read_csv('../data/movies_metadata.csv')\n"
      ]
     },
     {
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "id": "30c0c10a",
    "metadata": {},
    "outputs": [],
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "id": "0a414628",
    "metadata": {},
    "outputs": [],
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 12,
    "id": "3b3a1fbd",
    "metadata": {},
    "outputs": [
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "id": "9241fcb6",
    "metadata": {},
    "outputs": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "id": "48fea94a",
    "metadata": {},
    "outputs": [
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "id": "e2053114",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "c557ca08",
    "metadata": {},
    "outputs": [
