added gender bias audit

--- a/data_manipulation/data_cleaning.ipynb
+++ b/data_manipulation/data_cleaning.ipynb
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -927,39 +927,39 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Joe Johnston</td>\n",
-       "      <td>4945</td>\n",
+       "      <td>Joss Whedon</td>\n",
+       "      <td>12891</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Howard Deutch</td>\n",
-       "      <td>26502</td>\n",
+       "      <td>Andrew Stanton</td>\n",
+       "      <td>7</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Forest Whitaker</td>\n",
-       "      <td>2178</td>\n",
+       "      <td>Joel Cohen</td>\n",
+       "      <td>12892</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Charles Shyer</td>\n",
-       "      <td>56106</td>\n",
-       "      <td>2</td>\n",
+       "      <td>Alec Sokolow</td>\n",
+       "      <td>12893</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              name     id gender\n",
-       "0    John Lasseter   7879      2\n",
-       "1     Joe Johnston   4945      2\n",
-       "2    Howard Deutch  26502      2\n",
-       "3  Forest Whitaker   2178      2\n",
-       "4    Charles Shyer  56106      2"
+       "             name     id gender\n",
+       "0   John Lasseter   7879      2\n",
+       "1     Joss Whedon  12891      2\n",
+       "2  Andrew Stanton      7      2\n",
+       "3      Joel Cohen  12892      2\n",
+       "4    Alec Sokolow  12893      0"
       ]
      },
      "metadata": {},
@@ -983,7 +983,7 @@
     "    try:\n",
     "        crew_list = ast.literal_eval(crew_json_str)\n",
     "        return [{'name': member['name'], 'id': str(member['id']), 'gender': str(member['gender'])}\n",
-    "                for member in crew_list if member.get('job') == 'Director']\n",
+    "                for member in crew_list]\n",
     "    except:\n",
     "        return []\n",
     "\n",
@@ -1006,7 +1006,7 @@
     "\n",
     "# Save the exploded DataFrame to a CSV file\n",
     "exploded_actors_df.to_csv(\"../clean_data/actors.csv\", index=False)\n",
-    "exploded_directors_df.to_csv(\"../clean_data/directors.csv\", index=False)\n"
+    "exploded_directors_df.to_csv(\"../clean_data/crew.csv\", index=False)\n"
    ]
   },
   {
