--- a/model.ipynb
+++ b/model.ipynb
@@ -475,6 +475,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "fd8b99e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>final_ids</th>\n",
+       "      <th>prediction</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[141910, 141911, 141912, 141913, 21709, 141914...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[26100, 142689, 136761, 143595, 38529, 574833,...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[40325, 40327, 20664, 40329, 40330, 40331, 167...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[84223, 12111, 11664, 59919, 55466, 77070, 170...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[116, 110, 17288, 190895, 1925, 1846, 36463, 4...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           final_ids  prediction  label\n",
+       "0  [141910, 141911, 141912, 141913, 21709, 141914...           2      0\n",
+       "1  [26100, 142689, 136761, 143595, 38529, 574833,...           2      0\n",
+       "2  [40325, 40327, 20664, 40329, 40330, 40331, 167...           4      0\n",
+       "3  [84223, 12111, 11664, 59919, 55466, 77070, 170...           2      4\n",
+       "4  [116, 110, 17288, 190895, 1925, 1846, 36463, 4...           0      2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create a DataFrame with final_ids, predictions, and labels\n",
+    "result_df = pd.DataFrame({\n",
+    "    \"final_ids\": test_df[\"final_ids\"].tolist(),\n",
+    "    \"prediction\": predictions,\n",
+    "    \"label\": labels\n",
+    "})\n",
+    "\n",
+    "display(result_df.head())\n",
+    "\n",
+    "# Save the DataFrame to a CSV file\n",
+    "result_df.to_csv(\"results/revenue_results.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 702,
    "id": "7e43f859",
    "metadata": {},
